--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,15 +16,22 @@ body{
     margin-left: 250px;
 }
 #container {
-    margin-top: 50px;
+    margin-top: 10px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     width: 1000px;
     margin-left: 250px;
     padding: 10px
 }
-
+#content{
+    margin-top: 50px;
+    width: 1000px;
+    margin-left: 250px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
 .img{
     width: 150px;
     height: 150px;
@@ -34,7 +41,6 @@ body{
 
 .newDiv{
     position: relative;
-
 }
 .box{
     opacity: 1;
@@ -50,4 +56,48 @@ body{
     border-radius: 6px;
     cursor: pointer;
     transition: background-color 0.8s, color 0.8s, transform 0.8s;
+}
+.tirageText{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 12px;
+    font-family: 'Great Vibes';
+    color: rgba(56, 170, 215, 0.358);
+    align-items: center;
+    font-size: 2.5rem;
+    font-weight: 600;
+    
+}
+.reloadButton{
+    margin-top: 24px;
+    margin-left: 415px;
+    font-family: 'Open Sans';
+    width: 135px;
+    height: 150px;
+    padding: 15px;
+    color: white;
+    background-color: #145d5d;
+    border: 1px solid transparent;
+    border-radius: 20px;
+    height: fit-content;
+    justify-content: center;
+    align-items: center;
+
+}
+.resultDiv{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 55px;
+    margin-left: 15px;
+}
+.fa-solid{
+    color: white;
+    margin-right: 8px;
+}
+.WinnerText{
+    font-family: 'Great Vibes';
+    margin-left: 15px;
+    justify-content: center;
+    color: rgba(127, 206, 237, 0.484);
 }
